# py-load-euctr

./: .coverage  .gitignore  .pre-commit-config.yaml  =0.12.12  EUCTR_DOCUMENTATION.md  NOTICE  README.md  TROUBLESHOOTING.md  TUTORIAL.md  VIGNETTE.md  example.py  frd-compliance-vignette.md  pyproject.toml
.github/workflows/: ci.yml
py_load_euctr/: cli.py
py_load_euctr/extractor/: euctr.py
py_load_euctr/loaders/: base.py  postgres.py
py_load_euctr/models/: bronze.py  silver.py
py_load_euctr/sql/bronze/: create_bronze_table.sql
py_load_euctr/sql/silver/: create_silver_tables.sql  upsert_trials.sql
py_load_euctr/transformers/: euctr.py
src/py_load_euctr/: __init__.py  config.py  extractor.py  models.py  parser.py  utils.py
src/py_load_euctr/loader/: __init__.py  base.py  postgres.py
src/py_load_eurostat/: config.py  fetcher.py  parser.py
tests/: test_config.py  test_extractor.py  test_extractor_integration.py  test_fetcher.py  test_integration.py  test_integration_euctr.py  test_loader_base.py  test_loader_postgres.py  test_models.py  test_parser.py  test_utils.py
tests/integration/: test_pipeline.py
tests/unit/: test_cli.py  test_extractor.py  test_loader.py  test_models.py  test_transformer.py
