[project]
name = "py-load-euctr"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "google-labs-jules[bot]", email = "161369871+google-labs-jules[bot]@users.noreply.github.com"},
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "beautifulsoup4>=4.12.3",
    "psycopg[binary]>=3.1.18",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "pytest>=8.4.2",
    "mypy>=1.17.1",
    "testcontainers[postgres]>=4.4.0",
    "pytest-httpx>=0.29.0",
]
